# khafre

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.py  pyproject.toml  requirements.txt
assets/beermug/: BeerMugVisual.mtl  beermug.urdf
assets/table/: table.urdf
axioms/: affordances.properties  affordances.ttl  affordances_backup.ttl  affordances_reasoning.ofn  affordances_reasoning.omn  affordances_reasoning.properties  khafre.ttl  khafre_backgroundfacts.dfl  khafre_bg_theory.dfl
examples/: dbgvis_setup_input_connection.py  declusion_test.py  declusion_test_headless.py  flow_track.py  image_schematic_summary.py  objseg_setup_input_connection.py  objseg_setup_sim.py  objtrack_setup_input_connection.py  reasoning_setup_input_connection.py  requirements.txt  simple_reasoning.py  simulation_video_input.py  stored_video_input.py  tracker.py  websocket_video_input.py
examples/00_miscellaneous/: README.md  flow_track.py
examples/01_video_sources/: README.md  simulation_video_input.py  stored_video_input.py  stored_video_input_sam.py  websocket_video_input.py
examples/01_video_sources/assets/beermug/: BeerMugCollision.mtl
examples/01_video_sources/assets/table/: top.mtl
examples/02_event_segmentation/: README.md  image_schematic_summary.py
examples/02_event_segmentation/theories/example_image_schematic_summary/: backgroundFacts.dfl  defaultFacts.dfl  perceptionInterpretation.dfl
examples/03_functional_object_segmentation/: README.md  functional_object_segmentation.py
examples/03_functional_object_segmentation/theories/example_cutlery_and_fruit/: defaultFacts.dfl  interpretMasks.dfl  perceptionInterpretation.dfl  schemaInterpretation.dfl  updateSchemas.dfl
examples/04_contacts_in_images/: classes.txt  contacts_in_images.py
examples/theories/: simple_defaultFacts.dfl  simple_perceptionInterpretation.dfl  simple_schemaInterpretation.dfl  simple_updateQueries.dfl  simple_updateSchemas.dfl
examples/theories/example_cup_on_table/: backgroundFacts.dfl  defaultFacts.dfl  interpretMasks.dfl  perceptionInterpretation.dfl  schemaInterpretation.dfl  updateSchemas.dfl
examples/theories/example_cutlery_and_fruit/: backgroundFacts.dfl  perceptionInterpretation.dfl  schemaInterpretation.dfl
examples/theories/example_image_schematic_summary/: perceptionInterpretation.dfl  schemaInterpretation.dfl  updateSchemas.dfl
khafre/: __init__.py  contact.py
src/: CMakeLists.txt  contact.cpp  contactcpp.pyi
src-python/: sim_mp.py  simulation_test.py
src-python/khafre/: __init__.py  bricks.py  contact.py  dbgvis.py  declude.py  depth.py  downpointer.py  flowtracker.py  framestore.py  imagesequence.py  imagesource.py  nnwrappers.py  optical_flow.py  polygons.py  reasoning.py  sapien_wrapper.py  segmentation.py  silkie.py  storage.py  taskable.py  tracker.py  utils.py  videocapture.py
tests/: test_contact.py
